--- a/.editorconfig
+++ b/.editorconfig
@@ -8,5 +8,8 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.php]
+[{*.php,.htaccess}]
 indent_size = 4
+
+[.htaccess]
+indent_style = tab
