--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "cv",
   "description": "Mijn curriculum vitae website!",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "devDependencies": {
-    "npm": "^10.4.0",
+    "npm": "^10.8.2",
     "npm-run-all": "^4.1.5",
-    "sass": "^1.70.0",
-    "rollup": "^4.9.6",
-    "@rollup/plugin-commonjs": "^25.0.7",
+    "sass": "^1.77.8",
+    "rollup": "^4.18.1",
+    "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "browser-sync": "^3.0.2"
@@ -16,12 +16,12 @@
     "postinstall": "npm run build",
     "dev": "run-p watch live",
     "build": "run-s build:*",
-    "build:sass": "sass -s compressed --no-source-map scss/main.scss public/css/main.min.css",
+    "build:sass": "sass -s compressed scss/main.scss public/css/main.min.css",
     "build:js": "rollup js/main.js -o public/js/main.min.js -f es -p commonjs -p node-resolve -p terser",
     "watch": "run-p watch:*",
-    "watch:sass": "sass -w --update -s compressed --no-source-map scss/main.scss public/css/main.min.css",
+    "watch:sass": "sass -w --update -s compressed scss/main.scss public/css/main.min.css",
     "watch:js": "rollup js/main.js -o public/js/main.min.js -f es -w -p commonjs -p node-resolve -p terser",
-    "live": "browser-sync start -p http://cv.local -f public/css/main.min.css public/js/main.min.js views/** --no-online --no-notify --no-ui"
+    "live": "browser-sync start --open external --host cv.local -p cv.local -f public views -w --no-notify --no-ui"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,5 @@
     "curriculum vitae"
   ],
   "author": "Iwan van der Wal",
-  "license": "GPL-3.0-only",
   "homepage": "https://cv.iwanvanderwal.nl"
 }
