--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,13 @@
   "name": "cv/cv",
   "description": "Mijn curriculum vitae website!",
   "require": {
-    "php": "^8.4",
+    "php": "^8.3",
     "ext-pdo": "*",
     "ext-pdo_mysql": "*",
     "vlucas/phpdotenv": "^v5.6.1"
+  },
+  "require-dev": {
+    "roave/security-advisories": "dev-latest"
   },
   "autoload": {
     "psr-4": {
